# Api-fastApi

./: pyproject.toml  settings.py
fast_zero/: app.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 6d738c46d6c2_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
