[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["izabella-m <izabella.pessoa03@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"  # Ou ^3.12, se preferir
fastapi = "^0.115.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.taskipy.tasks]
run = 'fastapi dev fast_zero/app.py'

pre_test = 'task lint' 
test = 'pytest --cov=fast_zero -vv'
post_test = 'coverage html'

lint = 'ruff check . ; ruff check . --diff'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
